# task-manager

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  tests.py
.github/workflows/: actions.yml  ci.yml  tests.yml
fixtures/: user.json
task_manager/: myxini.py  settings.py  tests.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: label_objects.json  labels.json  labels_data.json  status_objects.json  status_test_data.json  statuses.json  task_test_data.json  tasks.json  tasks_data.json  user_objects.json  user_test_data.json  users.json  users_data.json
task_manager/label/: forms.py  urls.py  views.py
task_manager/label/tests/: test_label.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: label_setup.py  test_label.py
task_manager/settings/: __init__.py  dev.py  development.py  production.py
task_manager/status/: forms.py  models.py  urls.py  views.py
task_manager/status/migrations/: 0001_initial.py
task_manager/status/tests/: status_setup.py  test_status.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/task/: forms.py  models.py  urls.py  views.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/templates/: base.html  index.html  login.html
task_manager/tests/: test_index.py  test_status.py  test_task.py
task_manager/user/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/: forms.py  models.py  urls.py  views.py
(+56 files in other folders)
