[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "task management tool"
authors = ["midnight <ivanator666@gmail.com>"]
readme = "README.md"
packages = [
    {include = "task_manager"}
]
repository = "https://github.com/Midnight95/python-project-52.git"

[tool.poetry.dependencies]
python = ">=3.10"
python-dotenv = "^1.0.0"
Django = "^4.2.7"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
