[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "task management tool"
authors = ["midnight <ivanator666@gmail.com>"]
readme = "README.md"
packages = [
    {include = "task_manager"}
]
repository = "https://github.com/Midnight95/python-project-52.git"

[tool.poetry.dependencies]
python = ">=3.10.0"
django = "^5.0.4"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.3"
django-extensions = "^3.2.3"
django-filter = "^24.2"
rollbar = "^1.0.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
